--- a/templates/test_lang.yaml.j2
+++ b/templates/test_lang.yaml.j2
@@ -23,3 +23,4 @@ jobs:
           folder: {{ job.language }}
           build_command: {{ job.build_cmd }}
           run_command: {{ job.run_cmd }}
+{% endfor %}
