--- a/templates/test_lang.yaml.j2
+++ b/templates/test_lang.yaml.j2
@@ -1,15 +1,17 @@
 # THIS FILE IS GENERATED AUTOMATICALLY. IF YOU WANT TO CHANGE THIS, CHANGE
 # 'templates/test_lang.yaml.j2' FILE
 
-name: Test lang
+name: Test lang - {job.language}
 
 on:
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+    paths:
+      - 'BST/{{ language}}/**'
 
 jobs:
-
-{% for job in jobs %}  
+ 
   {{ job.language }}:
     runs-on: ubuntu-latest
     container:
@@ -23,4 +25,3 @@ jobs:
           folder: {{ job.language }}
           build_command: {{ job.build_cmd }}
           run_command: {{ job.run_cmd }}
-{% endfor %}
