--- a/templates/test_lang.yaml.j2
+++ b/templates/test_lang.yaml.j2
@@ -1,14 +1,14 @@
 # THIS FILE IS GENERATED AUTOMATICALLY. IF YOU WANT TO CHANGE THIS, CHANGE
 # 'templates/test_lang.yaml.j2' FILE
 
-name: Test lang - {job.language}
+name: Test lang - {{ job.language }}
 
 on:
   pull_request:
     branches:
       - master
     paths:
-      - 'BST/{{ language}}/**'
+      - 'BST/{{ job.language }}/**'
 
 jobs:
  
