--- a/templates/test_lang.yaml.j2
+++ b/templates/test_lang.yaml.j2
@@ -8,11 +8,10 @@ on:
     branches:
       - master
     paths:
-      - 'BST/{{ job.language }}/**'
+      - './BST/{{ job.language }}/**'
 
 jobs:
- 
-  {{ job.language }}:
+  test_output:
     runs-on: ubuntu-latest
     container:
       image: {{ job.image }}
