--- a/templates/test_lang.yaml.j2
+++ b/templates/test_lang.yaml.j2
@@ -23,4 +23,4 @@ jobs:
         with:
           folder: {{ job.language }}
           build_command: {{ job.build_cmd }}
-          run_command: {{ job.run_cmd }}
+          run_command: {{ job.run_cmd }} 100
