--- a/templates/main.yaml.j2
+++ b/templates/main.yaml.j2
@@ -42,7 +42,7 @@ jobs:
           path: ${{ github.workspace }}/temp
       - name: Install dependencies
         run: |
-          python -m pip install matplotlib
+          python -m pip install matplotlib docker
       - name: Generate Summary
         run: |
           ls ${{ github.workspace }}/temp/results
