--- a/templates/test_lang.yaml.j2
+++ b/templates/test_lang.yaml.j2
@@ -8,7 +8,7 @@ on:
     branches:
       - master
     paths:
-      - './BST/{{ job.language }}'
+      - './BST/{{ job.language }}/*'
 
 jobs:
   test_output_base:
