--- a/templates/test_lang.yaml.j2
+++ b/templates/test_lang.yaml.j2
@@ -22,6 +22,9 @@ jobs:
         uses: "./.github/template/test_lang"
         with:
           folder: {{ job.language }}
+          {% if job.install_requires %}
+          install_requires: {{ job.install_requires }}
+          {% endif %}
           {% if job.build_cmd %}
           build_command: {{ job.build_cmd }}
           {% endif %}
