--- a/templates/test_lang.yaml.j2
+++ b/templates/test_lang.yaml.j2
@@ -22,12 +22,8 @@ jobs:
         uses: "./.github/template/test_lang"
         with:
           folder: {{ job.language }}
-          {% if job.install_requires %}
-          install_requires: {{ job.install_requires }}
-          {% endif %}
-          {% if job.build_cmd %}
-          build_command: {{ job.build_cmd }}
-          {% endif %}
+          {% if job.install_requires %}install_requires: {{ job.install_requires }}{% endif %}
+          {% if job.build_cmd %}build_command: {{ job.build_cmd }}{% endif %}
           run_command: {{ job.run_cmd }}
           lenght: 100
           height: 14
@@ -44,12 +40,8 @@ jobs:
         uses: "./.github/template/test_lang"
         with:
           folder: {{ job.language }}
-          {% if job.install_requires %}
-          install_requires: {{ job.install_requires }}
-          {% endif %}
-          {% if job.build_cmd %}
-          build_command: {{ job.build_cmd }}
-          {% endif %}
+          {% if job.install_requires %}install_requires: {{ job.install_requires }}{% endif %}
+          {% if job.build_cmd %}build_command: {{ job.build_cmd }}{% endif %}
           run_command: {{ job.run_cmd }}
           lenght: {{ test_data.lenght }}
           height: {{ test_data.height }}
