--- a/web_app/style.css
+++ b/web_app/style.css
@@ -29,3 +29,15 @@ h1 {
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
+
+/* Change row color on hover */
+#bstTable tr:hover {
+    background-color: #ADD8E6;
+    /* Light blue color */
+}
+
+/* Change row color on click */
+#bstTable tr.clicked {
+    background-color: #90EE90;
+    /* Light green color */
+}
