--- a/web_app/style.css
+++ b/web_app/style.css
@@ -1,43 +1,105 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #f4f4f4;
     padding: 50px;
     padding-top: 10px;
     color: #333;
+    line-height: 1.6;
 }
 
 canvas {
     width: 100%;
-
     height: auto;
 }
 
 h1 {
     text-align: center;
-    color: #666;
+    color: #333;
+    font-weight: 300;
+    letter-spacing: 2px;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 50px;
 }
 
 .chart-container {
+    width: 48%;
     padding: 20px;
     border-radius: 5px;
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
 }
 
-/* Change row color on hover */
+.chart-container:hover {
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+}
+
+.table-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    width: 100%;
+}
+
+#bstTable,
+#configBox {
+    flex: 1;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+    margin: 5px;
+}
+
 #bstTable tr:hover {
-    background-color: #ADD8E6;
-    /* Light blue color */
+    background-color: #e0f7fa;
+    transition: background-color 0.3s ease;
 }
 
-/* Change row color on click */
 #bstTable tr.clicked {
-    background-color: #90EE90;
-    /* Light green color */
+    background-color: #b2dfdb;
+    transition: background-color 0.3s ease;
+}
+
+#configBox table {
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+
+#configBox th,
+#configBox td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+#bstTable th,
+#bstTable td {
+    padding: 3px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+.dropdown-container {
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+select {
+    width: auto;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+    background-color: #f4f4f4;
+    font-size: 16px;
+    color: #333;
+    margin-left: 5px;
 }
